--- a/hw-04-controllers-models/package.json
+++ b/hw-04-controllers-models/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"start": "node ./bin/www.mjs"
+		"start": "node ./bin/www.mjs",
+		"dev": "nodemon ./bin/www.mjs"
 	},
 	"dependencies": {
 		"cookie-parser": "~1.4.4",
